# simple-file-manager

./: Cargo.toml  README.md  filename.gph
src/: lib.rs
