[package]
name = "simple-file-manager"
version = "0.1.0"
edition = "2021"

authors = ["WDRshadow <i@wdr.im>"]
license = "MIT OR Apache-2.0"
description = "A tool to modify files"
readme = "README.md"
keywords = ["file", "demo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
